# getfundholdings-private

./: .gitignore  CHANGELOG.md  CLAUDE.md  PRD.md  alembic.ini  create_summary_tickers.py  cusip_to_ticker.py  debug_holdings.py  debug_isin_lookup.py  debug_nport.py  defs  example.ipynb  explore_xml_structure.py  get_top_holdings_tickers.py  load_cusip_cache.py  main.py  nport.md  parse_nport.py  process_all_series.py  pyproject.toml  wells_fargo_analysis.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release-please.yml
.trunk/: trunk.yaml
alembic/: env.py
alembic/versions/: 20250716233313_create_security_mappings_table.py  20250717000516_increase_ticker_column_size.py  20250721222153_create_cik_management_tables.py  20250721222240_populate_cik_data_from_constants.py  20250721225444_create_fund_series_classes_type6_scd.py  20250721225946_fix_series_id_column_length.py  20250722212628_create_nport_reports_table.py  20250727190942_add_yieldmax_cik_to_tidal_trust.py
docs/: data_models_postgres.md  data_pipeline.md  data_pipeline_postgres.md  etfs.md  lt_prd_client.md  pandas_pandera.md  r2_client.md
fh/: __init__.py  config_utils.py  constants.py  db_models.py  functions_process_nport_xml_file.py  openfigi_client.py  r2_client.py  sec_client.py  workflow.py  workflow_postgres.py
fh/external_schemas/: README.md  __init__.py  generator.py  openapi.yaml  typescript.d.ts
fh/internal_schemas/: __init__.py  holdings_schema.py  summary_ticker_schema.py
tests/: fetch_test_data.py  test_fetch_series_data.py  test_series_filings.py  test_simple.py
(+2 files in other folders)
